fix maven building problem